# supercamera-endoscope

./: .gitignore  README.md  README.md.pypi.bkp  grab_frame.py  pyproject.toml  test_camera.py
supercamera/: __init__.py  camera.py  cli.py  validate.py
